--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,4 +1,4 @@
-<article class="offer" id="{{ offer.id }}">
+<article class="tool" id="{{ offer.id }}">
   <h3>
     {% if offer.offer_link %}
       <a href="{{ offer.offer_link }}" rel="external">{{ offer.name }}</a>
