--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -9,7 +9,7 @@
   </h3>
 <details>
     <summary><h4>Details<span class="visuallyhidden"> for {{ offer.name }}</span></h4></summary>
-    <div class="tool__features" data-do-tabs>
+    <div class="tool__features">
       <dl>
           <dt>Offer type</dt>
           <dd>{{ offer.offer_type }}</dd>
