--- a/_includes/report-feature-support.liquid
+++ b/_includes/report-feature-support.liquid
@@ -10,15 +10,15 @@
   <div id="{{ guideline.id }}-partially" data-trigger hidden>
     <p>You selected <b>partial support</b>.</p>
     <p>Please describe what your support looks like, for example “accessible templates are available, but it is not very easy to find them. Improvements in search will be available in version 11”.</p>
-    <p>We will display this description with your tool, to help people find what they need.</p>
+    <p>We will display this description with your offer, to help people find what they need.</p>
     <label for="{{ guideline.id }}-partially-description">Description</label>
     <textarea id="{{ guideline.id }}-partially-description" style="width: 100%" rows="4">
     </textarea>
   </div>
   <div id="{{ guideline.id }}-not-applicable" data-trigger hidden>
-    <p>You selected <b>not applicable</b>. We will not list this criterion for your tool.</p>
+    <p>You selected <b>not applicable</b>. We will not list this criterion for your offer.</p>
   </div>
   <div id="{{ guideline.id }}-not-sure" data-trigger hidden>
-    <p>You selected <b>not sure</b>. We will not list this criterion for your tool.</p>
+    <p>You selected <b>not sure</b>. We will not list this criterion for your offer.</p>
   </div>
 </fieldset>
