--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,4 +1,4 @@
-<article class="tool" id="{{ offer.id }}">
+<article class="offer" id="{{ offer.id }}">
   <h3>
     {% if offer.offer_link %}
       <a href="{{ offer.offer_link }}" rel="external">{{ offer.name }}</a>
@@ -9,7 +9,7 @@
   </h3>
 <details>
     <summary><h4>Details<span class="visuallyhidden"> for {{ offer.name }}</span></h4></summary>
-    <div class="tool__features">
+    <div class="offer__features">
       <dl>
           <dt>Offer type</dt>
           <dd>{{ offer.offer_type }}</dd>
