--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -4,10 +4,10 @@
       <a href="{{ offer.offer_link }}" rel="external">{{ offer.name }}</a>
     {% else %}
       {{ offer.name }}
-      {{ offer.description }}
     {% endif %}
-     <span>by {{ offer.provider }}</span> <a href="#" class="tag">{{ offer.type_of_offer }}</a>
+     <span>by {{ offer.provider }}</span> <a href="#" class="tag">
   </h3>
+  <p>{{ offer.description }}</p>
 <details>
     <summary><h4>Details<span class="visuallyhidden"> for {{ offer.name }}</span></h4></summary>
     <div class="offer__features">
