--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -6,7 +6,7 @@
       {{ offer.name }}
     {% endif %}
      <span>by {{ offer.provider }}</span>
-     {{ offer.description }}
+     <p>{{ offer.description }}</p>
   </h3>
 <details>
     <summary><h4>Details<span class="visuallyhidden"> for {{ offer.name }}</span></h4></summary>
