--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -41,6 +41,7 @@
     color: var(--off-black);
   }
   .disclaimer h2{
+    background-color: gold;
     margin: 0px !important;
     padding: 10px;
     font-size: 1.3em;
