--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -34,6 +34,10 @@
     font-size: 85%;
   }
 
+  .offers-filters #button{
+    margin-bottom: 10px;
+  }
+
   .disclaimer {
     border: 1px solid var(--line-grey);
   }
