--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -38,6 +38,11 @@
     margin-bottom: 1em;
   }
 
+  #yes-offers button #col-sections{
+    display: none;
+  }
+
+
   .disclaimer {
     border: 1px solid var(--line-grey);
   }
