Target role to Audience

--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -18,7 +18,7 @@
           <dd>{{ offer.degree_certification}}</dd>
           <dt>Prerequisites</dt>
           <dd>{{ offer.prerequisites}}</dd>
-          <dt>Target role</dt>
+          <dt>Audience</dt>
           <dd>{{ offer.target_role}}</dd>
           <dt>Level</dt>
           <dd>{{ offer.level}}</dd>
