--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -43,8 +43,8 @@
           <dt>Reviews page</dt>
           <dd>{{ offer.offer_link_reviews}}</dd>
         </dl>
-        <p>This information was last updated on {{ offer.offer_info_last_update}}</p>
-        <p>This offer was last updated on {{ offer.offer_content_last_update}}</p>
+        <p>This information was last updated on {{ offer.offer_info_last_update}}.</p>
+        <p>This offer was last updated on {{ offer.offer_content_last_update}}.</p>
     </div>
   </details>
 </article>
