--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -281,9 +281,9 @@
     clear: left;
   }
   dt::after {
-    content: ":";
+    content: ": ";
   }
   dd {
-    padding: 0 0 0.5em 0;
+    padding: 0.3em 0 0.5em 0;
   }
 
