--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -274,16 +274,26 @@
   }
 
   dl {
-    padding: 0.5em;
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0
   }
   dt {
     float: left;
-    clear: left;
+    width: 50%;
+    /* adjust the width; make sure the total of both is 100% */
+    padding: 0;
+    margin: 0
+  }
+  dd {
+    float: left;
+    width: 50%;
+    /* adjust the width; make sure the total of both is 100% */
+    padding: 0;
+    margin: 0
   }
   dt::after {
     content: ": ";
-  }
-  dd {
-    padding: 0.3em 0 0.5em 0;
   }
 
