--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -271,30 +271,19 @@
     }
   }
 
-  dl {
-    width: 100%;
-    overflow: hidden;
-    padding: 0;
-    margin: 0
-  }
   dt {
     float: left;
-    width: 50%;
-    /* adjust the width; make sure the total of both is 100% */
-    padding: 0;
-    margin: 0
-  }
-  dd {
-    float: left;
-    width: 50%;
-    /* adjust the width; make sure the total of both is 100% */
-    padding: 0;
-    margin: 0
-  }
-  dt::after {
-    content: ": ";
-  }
-  #offer__features dd dt {
-    margin-top: 0 !important;
-  }
+    clear: left;
+    width: 110px;
+    font-weight: bold;
+}
+
+dt::after {
+    content: ":";
+}
+
+dd {
+    margin: 0 0 0 80px;
+    padding: 0 0 0.5em 0;
+}
 
