--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -10,7 +10,7 @@
   <p>{{ offer.description }}</p>
 <details>
     <summary><h4>Details<span class="visuallyhidden"> for {{ offer.name }}</span></h4></summary>
-    <div class="offer__features">
+    <div id="offer__features">
       <dl>
           <dt>Offer type</dt>
           <dd>{{ offer.offer_type }}</dd>
