--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -1,35 +1,42 @@
   @media (min-width: 40em) {
-    main  {
+    main {
       display: contents;
     }
   }
+
   .header-sup {
-     grid-column: 1 / 8; 
+    grid-column: 1 / 8;
   }
-  @media ( min-width: 72em ) {
+
+  @media ( min-width: 72em) {
     .header-sup {
       grid-column: 2 / 9;
     }
   }
-  main > header {
+
+  main>header {
     grid-column: 1 / 10;
   }
-  @media ( min-width: 72em ) {
-    main > header {
+
+  @media ( min-width: 72em) {
+    main>header {
       grid-column: 2 / 9;
     }
   }
+
   .box {
     grid-column: 1 / 9;
   }
+
   .header-sup {
     margin-bottom: 48px;
   }
+
   .header-sup p:first-child {
     margin-top: 0;
     font-size: 125%;
   }
- 
+
   .offers-filters {
     font-size: 85%;
   }
@@ -41,8 +48,8 @@
   .disclaimer {
     border: 1px solid var(--line-grey);
   }
-  
-  .disclaimer h2{
+
+  .disclaimer h2 {
     background-color: gold;
     margin: 0px !important;
     padding: 10px;
@@ -50,12 +57,12 @@
     color: var(--off-black);
   }
 
-  .disclaimer p{
+  .disclaimer p {
     padding: 10px;
   }
 
   #left-col h2 {
-     margin: 20px 0 20px;
+    margin: 20px 0 20px;
   }
 
   @media (min-width: 60em) {
@@ -66,42 +73,52 @@
       border-right: 1px solid #ccc;
     }
   }
+
   @media (min-width: 72em) {
     .offers-filters {
       grid-column: 2 / 4;
       padding-right: 2em;
     }
   }
+
   .offers-filters legend {
     font-size: 1em;
     margin-bottom: 8px;
   }
+
   a.more-info {
     color: var(--light-blue);
     margin-left: .5em;
     font-size: .8rem;
   }
+
   a.more-info:hover {
     color: var(--ocean);
   }
+
   .more-info__icon {
     display: inline-block;
     vertical-align: middle;
   }
+
   .more-info__icon svg {
     height: 1.5em;
   }
+
   .offers-filters__filter {
     display: flex;
     align-items: baseline;
     margin-bottom: 8px;
   }
+
   .offers-filters input {
     margin-right: .5em;
   }
+
   .offers {
     display: contents;
   }
+
   .offers-offers {
     display: flex;
     position: relative;
@@ -109,22 +126,26 @@
     margin-top: 2em;
     border-top: 1px solid #ccc;
   }
+
   @media (min-width: 60em) {
     .offers-offers {
       grid-column: 4 / span 7;
       padding-top: 0;
-      margin-top: 0;  
+      margin-top: 0;
       border-top: 0;
     }
   }
+
   @media (min-width: 72em) {
     .offers-offers {
       grid-column: 4 / span 5;
     }
   }
+
   .offers-offers p:first-child {
     margin-top: 0;
   }
+
   .offer {
     background-color: white;
     padding: 1em;
@@ -132,42 +153,48 @@
     margin-bottom: 1em;
     box-shadow: 1px 1px 4px -4px #000;
   }
+
   .offer h3 {
     margin: 0;
     font-size: 1em;
   }
+
   .offer h3 a {
     color: var(--wai-green);
   }
-  .offer h3 + p {
+
+  .offer h3+p {
     margin-top: 0;
   }
+
   .offer h3 span {
     font-weight: normal;
   }
+
   .offer h4 {
     font-size: 100%;
   }
-.offer__features { 
-  margin: 1em -1em -1em -3em;
-  background-color: var(--off-white);
-  padding: 1em;
-}
-  .offer__features dd {
-    margin-left: 0;
+
+  #offer__features {
+    margin: 1em -1em -1em -3em;
+    background-color: var(--off-white);
+    padding: 1em;
   }
 
-.offer__features-a11y {
-  grid-column: 1 / -1;
-}
-  .offer__features-a11y li > strong {
+  .offer__features-a11y {
+    grid-column: 1 / -1;
+  }
+
+  .offer__features-a11y li>strong {
     font-style: normal;
     font-weight: normal;
   }
-.offer__report {
-  float: right;
-  color: var(--grey);
-}
+
+  .offer__report {
+    float: right;
+    color: var(--grey);
+  }
+
   .tag {
     text-decoration: none;
     display: inline-block;
@@ -179,10 +206,12 @@
     margin-left: .5em;
     display: none;
   }
+
   .tag:hover {
     background-color: var(--w3c-blue);
     color: #fff;
   }
+
   .status:not([hidden]) {
     background: white;
     position: absolute;
@@ -199,9 +228,9 @@
     margin-bottom: 2em;
     cursor: pointer;
   }
-  
-  #deselect[hidden], #col-sections[hidden], #expand-sections[hidden] { 
-    display: none !important 
+
+  #deselect[hidden], #col-sections[hidden], #expand-sections[hidden] {
+    display: none !important
   }
 
   .submit-a-offer {
@@ -210,26 +239,28 @@
     justify-self: end;
     margin-bottom: 2em;
   }
-   
-  @media ( min-width: 72em ) {
+
+  @media ( min-width: 72em) {
     .submit-a-offer {
       grid-column: 7 / 9;
     }
-  
   }
 
-dt::after {
+  #offer__features dt::after {
     content: ":";
-}
+  }
 
-dt{
-  float: left;
-  clear: left;
-}
+  #offer__features dt {
+    float: left;
+    clear: left;
+    margin: 0 0.5em 0 !important;
+  }
 
+  #offer__features dt, dd {
+    margin-bottom: 0.5em !important;
+  }
 
-
-/* @media (min-width: 30em) {
+  /* @media (min-width: 30em) {
   .offer__features dt small {
     font-weight: normal;
     margin-left: 1em;
