--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -14,7 +14,7 @@
       <dl>
           <dt>Offer type</dt>
           <dd>{{ offer.offer_type }}</dd>
-          <dt>Degree of certification</dt>
+          <dt>Degree or certification</dt>
           <dd>{{ offer.degree_certification}}</dd>
           <dt>Prerequisites</dt>
           <dd>{{ offer.prerequisites}}</dd>
