--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -179,6 +179,7 @@
     margin: 1em -1em -1em -3em;
     background-color: var(--off-white);
     padding: 1em;
+    border-top: 1px solid var(--line-grey);
   }
 
   .offer__features-a11y {
