--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -24,6 +24,7 @@
           <dd>{{ offer.level}}</dd>
           <dt>WAI Curricula module</dt>
           <dd>{{ offer.curricula_correspondence}}</dd>
+          <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a></dd>
           <dt>Topics</dt>
           <dd>{{ offer.keywords_topics}}</dd>
           <dt>Language</dt>
