--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -32,6 +32,8 @@
           <dd>{{ offer.country}}</dd>
           <dt>Format</dt>
           <dd>{{ offer.format}}</dd>
+          <dt>Learning</dt>
+          <dd>{{ offer.learning}}</dd>
           <dt>Platform</dt>
           <dd>{{ offer.platform}}</dd>
           <dt>Cost</dt>
