--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -27,7 +27,7 @@
           <dt>Topics</dt>
           <dd>{{ offer.keywords_topics}}</dd>
           <dt>Language</dt>
-          <dd>{{ offer.language}}</dd>
+          <dd>{{ site.data.language[offer.language]}}</dd>
           <dt>Country</dt>
           <dd>{{ offer.country}}</dd>
           <dt>Format</dt>
