--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -21,7 +21,11 @@
           <dt>Level</dt>
           <dd>{{ offer.level}}</dd>
           <dt>WAI Curricula module</dt>
-          <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a></dd>
+          {% if offer.curricula_link %}
+            <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a></dd>
+          {% else %}
+            <dd>Not provided</dd>
+          {% endif %}
           <dt>Topics</dt>
           <dd>{{ offer.keywords_topics}}</dd>
           <dt>Language</dt>
