--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -48,7 +48,9 @@
           <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link_reviews}}</a></dd>
         </dl>
         <p>This information was last updated on {{ offer.offer_info_last_update}}.</p>
-        <p>The content of this offer was last updated on {{ offer.offer_content_last_update}}.</p>
+        {% if offer.offer_content_last_update %}
+          <p>The content of this offer was last updated on {{ offer.offer_content_last_update}}.</p>
+        {% endif %} 
     </div>
   </details>
 </article>
