--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -35,7 +35,7 @@
           <dt>Format</dt>
           <dd>{{ offer.format}}</dd>
           <dt>Learning</dt>
-          <dd>{{ offer.learning}}</dd>
+          <dd>{{ offer.learning.toString()}}</dd>
           <dt>Platform</dt>
           <dd>{{ offer.platform}}</dd>
           <dt>Cost</dt>
