--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -29,7 +29,7 @@
           <dt>Topics</dt>
           <dd>{{ offer.keywords_topics}}</dd>
           <dt>Language</dt>
-          <dd>{{ site.data.lang[offer.language].name}}</dd>
+          <dd>{{ site.data.lang[offer[0].language].name}}</dd>
           <dt>Country</dt>
           <dd>{{ offer.country}}</dd>
           <dt>Format</dt>
