--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -29,6 +29,7 @@
           <dt>Topics</dt>
           <dd>{{ offer.keywords_topics}}</dd>
           <dt>Language</dt>
+          <dd>lang</dd>
           <dd>{{ site.data.lang[offer.language[0]] }}</dd>
           <dd>{{ offer.language[0]}}</dd>
           <dt>Country</dt>
