--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -30,7 +30,7 @@
           <dd>{{ offer.keywords_topics}}</dd>
           <dt>Language</dt>
           <dd>lang</dd>
-          <dd>{{ site.data.lang['en'] }}</dd>
+          <dd>{{ site.data.lang[offer.language[0]] }}</dd>
           <dd>{{ offer.language[0]}}</dd>
           <dt>Country</dt>
           <dd>{{ offer.country}}</dd>
