--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -31,7 +31,7 @@
           <dt>Language</dt>
           <dd>lang</dd>
           {% assign langIndex = offer.language[0] %}
-          <dd>{{ site.data.lang[langIndex] }}</dd>
+          <dd>{{ site.data.lang[langIndex].name }}</dd>
           <dd>{{ langIndex }}</dd>
           <dt>Country</dt>
           <dd>{{ offer.country}}</dd>
