--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -33,7 +33,7 @@
           <dd>{{ site.data.lang[langIndex].name }} ({{ site.data.lang[langIndex].nativeName }})</dd>
           <dt>Country</dt>
           {% assign countryIndex = offer.country[0] %}
-          <dd>{{ site.data.country[countryIndex].name }} ({{ site.data.country[countryIndex].nativeName }})</dd>
+          <dd>{{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})</dd>
           <dt>Format</dt>
           <dd>{{ offer.format}}</dd>
           <dt>Learning</dt>
