--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -34,7 +34,7 @@
           <dt>Country</dt>
           {% assign countryIndex = offer.country[0] %}
           <dd>{{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})</dd>
-          <dd>{% offer.country[0] %}</dd>
+          <dd>{{ offer.country[0] }}</dd>
           <dt>Format</dt>
           <dd>{{ offer.format}}</dd>
           <dt>Learning</dt>
