--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -34,7 +34,8 @@
           <dt>Country</dt>
           {% assign countryIndex = offer.country[0] %}
           <dd>{{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})</dd>
-          <dd>{{ offer.country[0] }}</dd>
+          <dd> country </dd>
+          <dd>{{ countryIndex }}</dd>
           <dt>Format</dt>
           <dd>{{ offer.format}}</dd>
           <dt>Learning</dt>
