target_role -> audience

--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -17,7 +17,7 @@
           <dt>Prerequisites</dt>
           <dd>{{ offer.prerequisites}}</dd>
           <dt>Audience</dt>
-          <dd>{{ offer.target_role}}</dd>
+          <dd>{{ offer.audience}}</dd>
           <dt>Level</dt>
           <dd>{{ offer.level}}</dd>
           <dt>WAI Curricula module</dt>
