--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -19,9 +19,9 @@
           <dt>Level</dt>
           <dd>{{ offer.level}}</dd>
           <dt>Prerequisites</dt>
-          <dd>{{ offer.prerequisites}}</dd>
+          <dd>{{ offer.prerequisites | join: ", "}}</dd>
           <dt>Topics</dt>
-          <dd>{{ offer.keywords_topics }}</dd>
+          <dd>{{ offer.keywords_topics | join: ", "}}</dd>
           <dt>WAI Curricula module</dt>
           {% if offer.curricula_link %}
             <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a></dd>
