--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,3 +1,13 @@
+{::nomarkdown}
+{% include box.html type="start" title="Standard header" %}
+{:/}
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem laudantium, molestias perspiciatis corporis aspernatur earum quibusdam, sequi, error pariatur delectus accusantium, cum! Maxime ad, eos ea. Ab labore aliquam quam!
+
+{::nomarkdown}
+{% include box.html type="end" %}
+{:/}
+
 <article class="offer" id="{{ offer.id }}">
   <h3>
     {% if offer.offer_link %}
