--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,68 +1,6 @@
-{::nomarkdown}
-{% include box.html type="start" title="Standard header" %}
-{:/}
+{% include box.html type="start" title= %}
+      "<a href="{{ offer.offer_link }}" rel="external">{{ offer.name }}</a>"
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem laudantium, molestias perspiciatis corporis aspernatur earum quibusdam, sequi, error pariatur delectus accusantium, cum! Maxime ad, eos ea. Ab labore aliquam quam!
 
-{::nomarkdown}
 {% include box.html type="end" %}
-{:/}
-
-<article class="offer" id="{{ offer.id }}">
-  <h3>
-    {% if offer.offer_link %}
-      <a href="{{ offer.offer_link }}" rel="external">{{ offer.name }}</a>
-    {% else %}
-      {{ offer.name }}
-    {% endif %}
-     <span>by {{ offer.provider }}</span>
-  </h3>
-  <p>{{ offer.description }}</p>
-<details>
-    <summary><h4>Details<span class="visuallyhidden"> for {{ offer.name }}</span></h4></summary>
-    <div id="offer__features">
-      <dl>
-          <dt>Offer type</dt>
-          <dd>{{ offer.offer_type }}</dd>
-          <dt>Audience</dt>
-          <dd>{{ offer.audience | join: ", "}}</dd>
-          <dt>Level</dt>
-          <dd>{{ offer.level}}</dd>
-          <dt>Prerequisites</dt>
-          <dd>{{ offer.prerequisites | join: ", "}}</dd>
-          <dt>Topics</dt>
-          <dd>{{ offer.keywords_topics | join: ", "}}</dd>
-          <dt>WAI Curricula module</dt>
-          {% if offer.curricula_link %}
-            <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a></dd>
-          {% else %}
-            <dd>Not provided</dd>
-          {% endif %}
-          <dt>Language</dt>
-          {% assign langIndex = offer.language[0] %}
-          <dd>{{ site.data.lang[langIndex].name }} ({{ site.data.lang[langIndex].nativeName }})</dd>
-          <dt>Country</dt>
-          {% assign countryIndex = offer.country[0] %}
-          <dd>{{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})</dd>
-          <dt>Format</dt>
-          <dd>{{ offer.format}}</dd>
-          <dt>Learning</dt>
-          <dd>{{ offer.learning | join: ", "}}</dd>
-          <dt>Platform</dt>
-          <dd>{{ offer.platform}}</dd>
-          <dt>Duration</dt>
-          <dd>{{ offer.duration}}</dd>
-          <dt>Cost</dt>
-          <dd>{{ offer.cost}}</dd>
-          <dt>Web site</dt>
-          <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link}}</a></dd>
-          <dt>Reviews page</dt>
-          <dd><a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link_reviews}}</a></dd>
-        </dl>
-        <p>This information was last updated on {{ offer.offer_info_last_update}}.</p>
-        {% if offer.offer_content_last_update %}
-          <p>The content of this offer was last updated on {{ offer.offer_content_last_update}}.</p>
-        {% endif %} 
-    </div>
-  </details>
-</article>
