--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,5 +1,5 @@
-{% include box.html type="start" title= %}
-      "<a href="{{ offer.offer_link }}" rel="external">{{ offer.name }}</a>"
+{% %}
+{% include box.html type="start" title=offer.name %}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem laudantium, molestias perspiciatis corporis aspernatur earum quibusdam, sequi, error pariatur delectus accusantium, cum! Maxime ad, eos ea. Ab labore aliquam quam!
 
