--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,5 +1,5 @@
-{% %}
-{% include box.html type="start" title={{offer.name}} %}
+{% assign name = offer.name%}
+{% include box.html type="start" title=name %}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem laudantium, molestias perspiciatis corporis aspernatur earum quibusdam, sequi, error pariatur delectus accusantium, cum! Maxime ad, eos ea. Ab labore aliquam quam!
 
