--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -5,5 +5,5 @@
 
 {% include box.html type="start" title=offer_title %}
 {{ offer.description }}
-[{{offer.name}}]({{offer.offer_link}})
+*[{{offer.name}}]({{offer.offer_link}})
 {% include box.html type="end" %}
