--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -3,6 +3,6 @@
 {% endcapture %}
 
 
-{% include box.html type="start" title=offer_title %}
+{% include box.html type="start" title=offer_title id=offer.id%}
 {{ offer.description }}
 {% include box.html type="end" %}
