--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -6,3 +6,13 @@
 {% include box.html type="start" title=offer_title id=offer.id%}
 {{ offer.description }}
 {% include box.html type="end" %}
+
+{% include excol.html type="start" %}
+
+### Details
+
+{% include excol.html type="middle" %}
+
+Content of the expand/collapse.
+
+{% include excol.html type="end" %}
