--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -7,17 +7,16 @@
 
 
 
-{% include excol.html type="all" %}
 
 {% include excol.html type="start" id="one" %}
 
-### Details
+### Heading 3
 
 {% include excol.html type="middle" %}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus incidunt velit quia quisquam odio, minus, blanditiis molestias deserunt facere consequuntur placeat minima odit ex officia est nemo neque aut provident?
 
-
+{% include excol.html type="end" %}
 
 
 {% include box.html type="end" %}
