--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -2,21 +2,16 @@
 
 
 {% include box.html type="start" title=offer_title id=offer.id h="3" %}
-
 {{ offer.description }}
 
-
-
-
 {% include excol.html type="start" id="one" %}
-
 #### Details
-
 {% include excol.html type="middle" %}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus incidunt velit quia quisquam odio, minus, blanditiis molestias deserunt facere consequuntur placeat minima odit ex officia est nemo neque aut provident?
+Offer type
+: {{ offer.type }}
+Audience
+: {{ offer.audience | join: ", " }}
 
 {% include excol.html type="end" %}
-
-
 {% include box.html type="end" %}
