--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -9,10 +9,11 @@
 {% include excol.html type="middle" %}
 
 Offer type
-: {{ offer.type }}
+: {{ offer.offer_type }}
 
 Audience
 : {{ offer.audience | join: ", " }}
+{:.offers_details}
 
 {% include excol.html type="end" %}
 {% include box.html type="end" %}
